--- a/index.html
+++ b/index.html
@@ -330,7 +330,18 @@ display:none;
 				<li>대충 만든 공지입니다.</li>
 			</ul>
 			<br/>
-
+			<ul style=" background: #fcf3f3;font-size: 15pt;">
+				<li><label class="new_nt">new</label>2025-03-19</li>
+				<li>"달걀 주머니" 누락 이슈</li>
+				<li>&nbsp;</li>
+				<li>1. 마을 "전체" 일때</li>
+				<li>2. 더블 클릭으로 채널링할 경우</li>
+				<li>&nbsp;</li>
+				<li>=> "달걀 주머니" 만 누락 되는 경우가 있습니다.</li>
+				<li>웃기는게 다른 주머니는 누락이 안되고 달걀만 그러네요🤔</li>
+				<li>&nbsp;</li>
+				<li>이건 시간 여유 생기는대로 고쳐서 업데이트 하겠습니다</li>
+			</ul>
 			<ul style=" background: #fcf3f3;">
 				<li><label class="new_nt">new</label>2025-03-13</li>
 				<li>&nbsp;</li>
