--- a/index.html
+++ b/index.html
@@ -330,6 +330,14 @@ display:none;
 				<li>대충 만든 공지입니다.</li>
 			</ul>
 			<ul style=" background: #f3f9fc;">
+				<li><label class="new_nt">new</label>2025-08-12</li>
+				<li>허브 주머니 임시 조치</li>
+				<li>1. 현재 허브 주머니 이미지를 api에서 제공해주지 않습니다.... 이미지 작업이 완료 될때까지 제공X</li>
+				<li>2. 색상 코드는 기존과 다른 방식으로 세트 확인을 해야해서 아직 업데이트 되지 않았습니다.</li>
+				<li>3. 2번 문제 해결 중입니다................</li>
+			</ul>
+			<hr>
+			<ul style=" background: #f3f9fc;">
 				<li><label class="new_nt">new</label>2025-03-22</li>
 				<li><label  style="text-decoration: line-through;font-size:14pt;">"달걀 주머니" 누락 이슈</label> - 수정 완료</li>
 				<li style="text-decoration: line-through;">1. 마을 "전체" 일때</li>
@@ -469,7 +477,7 @@ display:none;
 	
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p style="font-size: 13px;">V250322</p>
+		<p style="font-size: 13px;">V250812-herb-temp</p>
 		<span>울프 주머니@Shuu__deal</span>
 	</footer>
 </body>
@@ -479,3 +487,4 @@ display:none;
 
 </script>
 </html>
+
