--- a/index.html
+++ b/index.html
@@ -332,13 +332,15 @@ display:none;
 			<ul style=" background: #f3f9fc;">
 				<li><label class="new_nt">new</label>2025-08-12</li>
 				<li>허브 주머니 임시 조치</li>
-				<li>1. 현재 허브 주머니 이미지를 api에서 제공해주지 않습니다.... 이미지 작업이 완료 될때까지 제공X</li>
-				<li>2. 색상 코드는 기존과 다른 방식으로 세트 확인을 해야해서 아직 업데이트 되지 않았습니다.</li>
-				<li>3. 2번 문제 해결 중입니다................</li>
+				<li>1. 현재 허브 주머니 이미지를 api에서 제공해주지 않습니다.... 이미지 작업이 완료 될때까지 제공 X</li>
+				<li  style="text-decoration: line-through;">2. 색상 코드는 기존과 다른 방식으로 세트 확인을 해야해서 아직 업데이트 되지 않았습니다.</li>
+				<li  style="text-decoration: line-through;">3. 2번 문제 해결 중입니다................</li>
+				<li>4. 채널링 기능 복구</li>
+				<li>5. 허브 주머니 임시 이미지(?) 사용</li>
 			</ul>
 			<hr>
-			<ul style=" background: #f3f9fc;">
-				<li><label class="new_nt">new</label>2025-03-22</li>
+			<ul>
+				<li>2025-03-22</li>
 				<li><label  style="text-decoration: line-through;font-size:14pt;">"달걀 주머니" 누락 이슈</label> - 수정 완료</li>
 				<li style="text-decoration: line-through;">1. 마을 "전체" 일때</li>
 				<li style="text-decoration: line-through;">2. 더블 클릭으로 채널링할 경우</li>
@@ -487,4 +489,5 @@ display:none;
 
 </script>
 </html>
+
 
