--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ display:none;
 	
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p style="font-size: 13px;">V250812-herb-temp</p>
+		<p style="font-size: 13px;">V250812-herb-temp2</p>
 		<span>울프 주머니@Shuu__deal</span>
 	</footer>
 </body>
@@ -489,5 +489,6 @@ display:none;
 
 </script>
 </html>
+
 
 
