--- a/index.html
+++ b/index.html
@@ -331,12 +331,11 @@ display:none;
 			</ul>
 			<ul style=" background: #f3f9fc;">
 				<li><label class="new_nt">new</label>2025-08-12</li>
+				<li style="font-size: 13pt;font-weight:bold;">공용키 사용 불가능 안정화 후 복구 예정</li>
 				<li>허브 주머니 임시 조치</li>
 				<li>1. 현재 허브 주머니 이미지를 api에서 제공해주지 않습니다.... 이미지 작업이 완료 될때까지 제공 X</li>
-				<li  style="text-decoration: line-through;">2. 색상 코드는 기존과 다른 방식으로 세트 확인을 해야해서 아직 업데이트 되지 않았습니다.</li>
-				<li  style="text-decoration: line-through;">3. 2번 문제 해결 중입니다................</li>
-				<li>4. 채널링 기능 복구</li>
-				<li>5. 허브 주머니 임시 이미지(?) 사용</li>
+				<li>2. 채널링 기능 복구</li>
+				<li>3. 허브 주머니 임시 이미지(?) 사용</li>
 			</ul>
 			<hr>
 			<ul>
@@ -489,6 +488,7 @@ display:none;
 
 </script>
 </html>
+
 
 
 
