--- a/index.html
+++ b/index.html
@@ -330,12 +330,16 @@ display:none;
 				<li>대충 만든 공지입니다.</li>
 			</ul>
 			<ul style=" background: #f3f9fc;">
-				<li><label class="new_nt">new</label>2025-08-12</li>
+				<li><label class="new_nt">new</label>2025-08-13</li>
 				<li style="font-size: 13pt;font-weight:bold;">공용키 사용 불가능 안정화 후 복구 예정</li>
+				<li>이번 신규 주머니도 이미지 제작해서 파일 제공 해주신 <a href="https://x.com/darkchocored" target="_blank">주머니보고다님@darkchocored</a>님 감사합니다</li>				
+			</ul>
+			<ul style=" background: #f3f9fc;">
+				<li><label class="new_nt">new</label>2025-08-12</li>
 				<li>허브 주머니 임시 조치</li>
-				<li>1. 현재 허브 주머니 이미지를 api에서 제공해주지 않습니다.... 이미지 작업이 완료 될때까지 제공 X</li>
+				<li style="text-decoration: line-through;">1. 현재 허브 주머니 이미지를 api에서 제공해주지 않습니다.... 이미지 작업이 완료 될때까지 제공 X</li>
 				<li>2. 채널링 기능 복구</li>
-				<li>3. 허브 주머니 임시 이미지(?) 사용</li>
+				<li style="text-decoration: line-through;">3. 허브 주머니 임시 이미지(?) 사용</li>
 			</ul>
 			<hr>
 			<ul>
@@ -488,6 +492,7 @@ display:none;
 
 </script>
 </html>
+
 
 
 
