--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ display:none;
 	
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p style="font-size: 13px;">V250812-herb-temp2</p>
+		<p style="font-size: 13px;">V250812-herb-img</p>
 		<span>울프 주머니@Shuu__deal</span>
 	</footer>
 </body>
@@ -492,6 +492,7 @@ display:none;
 
 </script>
 </html>
+
 
 
 
