--- a/index.html
+++ b/index.html
@@ -332,7 +332,8 @@ display:none;
 			<ul style=" background: #f3f9fc;">
 				<li><label class="new_nt">new</label>2025-08-13</li>
 				<li style="font-size: 13pt;font-weight:bold;">공용키 사용 불가능 안정화 후 복구 예정</li>
-				<li>이번 신규 주머니도 이미지 제작해서 파일 제공 해주신 <a href="https://x.com/darkchocored" target="_blank">주머니보고다님@darkchocored</a>님 감사합니다</li>				
+				<li>이번 신규 주머니도 이미지 제작해서 파일 제공 해주신 <a href="https://x.com/darkchocored" target="_blank">주머니보고다님@darkchocored</a>님 감사합니다</li>	
+				<li>더 튼튼 주머니 D 파트는 좀 더 확인 후 삭제 예정입니다</li>
 			</ul>
 			<ul style=" background: #f3f9fc;">
 				<li><label class="new_nt">new</label>2025-08-12</li>
@@ -492,6 +493,7 @@ display:none;
 
 </script>
 </html>
+
 
 
 
