--- a/index.html
+++ b/index.html
@@ -334,6 +334,9 @@ display:none;
 				<li style="font-size: 13pt;font-weight:bold;">공용키 사용 불가능 안정화 후 복구 예정</li>
 				<li>이번 신규 주머니도 이미지 제작해서 파일 제공 해주신 <a href="https://x.com/darkchocored" target="_blank">주머니보고다님@darkchocored</a>님 감사합니다</li>	
 				<li>더 튼튼 주머니 D 파트는 좀 더 확인 후 삭제 예정입니다</li>
+				<li>주머니 베타 버전에도 허브 주머니 이미지가 적용되었습니다</li>
+				<li>미리보기 이미지는 인게임과 오차가 있을 수 있습니다</li>
+				<li>이미지의 경우 확인 후 수정될 가능성이 있습니다</li>
 			</ul>
 			<ul style=" background: #f3f9fc;">
 				<li><label class="new_nt">new</label>2025-08-12</li>
@@ -493,6 +496,7 @@ display:none;
 
 </script>
 </html>
+
 
 
 
