--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="./js/a_001.min.js?241209"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
 <script	src="https://cdn.jsdelivr.net/npm/dom-to-image-font-patch@latest/dist/dom-to-image-font-patch.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?V250813"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?V250818"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
 <link rel="stylesheet" href="./js/izitoast/iziToast.css"></link>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
@@ -330,20 +330,18 @@ display:none;
 				<li>대충 만든 공지입니다.</li>
 			</ul>
 			<ul style=" background: #f3f9fc;">
-				<li><label class="new_nt">new</label>2025-08-13</li>
+				<li><label class="new_nt">new</label>2025-08-18</li>
+				<li>주머니BETA(수배지) 허브주머니 픽셀 틀어짐 수정</li>
+			</ul>
+			<hr>
+			<ul style=" background: #f3f9fc;">
+				<li>2025-08-13</li>
 				<li style="text-decoration: line-through;">공용키 사용 불가능 안정화 후 복구 예정 [완료]</li>
 				<li>이번 신규 주머니도 이미지 제작해서 파일 제공 해주신 <a href="https://x.com/darkchocored" target="_blank">주머니보고다님@darkchocored</a>님 감사합니다</li>	
 				<li>더 튼튼 주머니 D 파트는 좀 더 확인 후 삭제 예정입니다</li>
 				<li>주머니 베타 버전에도 허브 주머니 이미지가 적용되었습니다</li>
-				<li>미리보기 이미지는 인게임과 오차가 있을 수 있습니다</li>
+				<li style="font-weight:bold">미리보기 이미지는 인게임과 오차가 있을 수 있습니다</li>
 				<li>이미지의 경우 확인 후 수정될 가능성이 있습니다</li>
-			</ul>
-			<ul style=" background: #f3f9fc;">
-				<li><label class="new_nt">new</label>2025-08-12</li>
-				<li>허브 주머니 임시 조치</li>
-				<li style="text-decoration: line-through;">1. 현재 허브 주머니 이미지를 api에서 제공해주지 않습니다.... 이미지 작업이 완료 될때까지 제공 X</li>
-				<li>2. 채널링 기능 복구</li>
-				<li style="text-decoration: line-through;">3. 허브 주머니 임시 이미지(?) 사용</li>
 			</ul>
 			<hr>
 			<ul>
@@ -486,7 +484,7 @@ display:none;
 	
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p style="font-size: 13px;">V250812-herb-img</p>
+		<p style="font-size: 13px;">V250818-img-size</p>
 		<span>울프 주머니@Shuu__deal</span>
 	</footer>
 </body>
@@ -496,6 +494,7 @@ display:none;
 
 </script>
 </html>
+
 
 
 
