--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="./js/a_001.min.js?241209"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
 <script	src="https://cdn.jsdelivr.net/npm/dom-to-image-font-patch@latest/dist/dom-to-image-font-patch.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?V250818"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?V250819"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
 <link rel="stylesheet" href="./js/izitoast/iziToast.css"></link>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
@@ -330,6 +330,10 @@ display:none;
 				<li>대충 만든 공지입니다.</li>
 			</ul>
 			<ul style=" background: #f3f9fc;">
+				<li><label class="new_nt">new</label>2025-08-19 [ShuuJumoney-250819]</li>
+				<li>마을 "전체" 일때 더블 클릭 채널링 달걀 주머니 누락 이슈 수정</li>
+			</ul>
+			<ul style=" background: #f3f9fc;">
 				<li><label class="new_nt">new</label>2025-08-18</li>
 				<li>주머니BETA(수배지) 허브주머니 픽셀 틀어짐 수정</li>
 			</ul>
@@ -484,7 +488,7 @@ display:none;
 	
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p style="font-size: 13px;">V250818-img-size</p>
+		<p style="font-size: 13px;">ShuuJumoney-250819</p>
 		<span>울프 주머니@Shuu__deal</span>
 	</footer>
 </body>
@@ -494,6 +498,7 @@ display:none;
 
 </script>
 </html>
+
 
 
 
