--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <script type="text/javascript" src="./js/apiCode.js"></script>
 <script src="./js/erinTime.min.js?v20250313-03"></script>
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
-<script type="text/javascript" src="./js/a_001.min.js?241209"></script>
+<script type="text/javascript" src="./js/a_001.js?241209"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
 <script	src="https://cdn.jsdelivr.net/npm/dom-to-image-font-patch@latest/dist/dom-to-image-font-patch.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?V250819"></script>
+<script type="text/javascript" src="./js/jumoney.js?V250819"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
 <link rel="stylesheet" href="./js/izitoast/iziToast.css"></link>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
@@ -443,7 +443,149 @@ display:none;
 	                    <img id="modalMabibaseImageCopy" src="" class="zoomable-image-copy">
 	                </div>
 	                <div class="image-list-sample">
-	                </div>
+						<div class="set-group">
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110005.png" alt="튼튼한 달걀 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110006.png" alt="튼튼한 감자 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110007.png" alt="튼튼한 옥수수 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110008.png" alt="튼튼한 밀 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110009.png" alt="튼튼한 보리 주머니">
+							</div>
+						</div>
+						<div class="set-group">
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110010.png" alt="튼튼한 양털 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/2041.png" alt="튼튼한 거미줄 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/2042.png" alt="튼튼한 가는 실뭉치 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/2043.png" alt="튼튼한 굵은 실뭉치 주머니">
+							</div>
+						</div>
+						<div class="set-group">
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110014.png" alt="튼튼한 저가형 가죽 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110015.png" alt="튼튼한 일반 가죽 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110016.png" alt="튼튼한 고급 가죽 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110017.png" alt="튼튼한 최고급 가죽 주머니">
+							</div>
+						</div>
+						<div class="set-group">
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110018.png" alt="튼튼한 저가형 옷감 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110019.png" alt="튼튼한 일반 옷감 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110020.png" alt="튼튼한 고급 옷감 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110021.png" alt="튼튼한 최고급 옷감 주머니">
+							</div>
+						</div>
+						<div class="set-group">
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110022.png" alt="튼튼한 저가형 실크 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110023.png" alt="튼튼한 일반 실크 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110024.png" alt="튼튼한 고급 실크 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110025.png" alt="튼튼한 최고급 실크 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/5110044.png" alt="튼튼한 꽃바구니">
+							</div>
+						</div>
+						<div class="set-group">
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/bloody.png" alt="튼튼한 블러디 허브 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/mana.png" alt="튼튼한 마나 허브 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/sunlight.png" alt="튼튼한 선라이트 허브 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/base.png" alt="튼튼한 베이스 허브 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/mandrake.png" alt="튼튼한 만드레이크 주머니">
+							</div>
+						</div>
+						<div class="set-group">
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/more_bloody.png" alt="더 튼튼한 블러디 허브 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/more_mana.png" alt="더 튼튼한 마나 허브 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/more_sunlight.png" alt="더 튼튼한 선라이트 허브 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/more_base.png" alt="더 튼튼한 베이스 허브 주머니">
+							</div>
+							<div class="image-container2">
+								<div class="loading-spinner" style="display: none;"></div>
+								<img class="default_jumoney" src="./image/jumoney/all_base/more_mandrake.png" alt="더 튼튼한 만드레이크 주머니">
+							</div>
+						</div>
+					</div>
 	                
 	            </div>
 				<!-- <button id="capturePreviewBtn">미리보기</button> -->
@@ -477,7 +619,7 @@ display:none;
 	  <div class="spinner"></div>
 	  <p>로딩 중<br/>잠시만 기다려주세요.<span id="completeCnt"></span></p>
 	  <p id="curCallState"></p>
-	  <p><br/></p>
+	  <p id="curDisplayState"><br/><br/></p>	  
 	  <p>중간에 멈출 경우 페이지를 새로고침을 하지 말고<br/>다시 채널링 버튼을 누르면 못 받은 데이터만 호출 합니다.</p>
 	  <p></p>
 	  <p style="display: inline;">"에러 발생시에만" 로딩 화면이 꺼지지 않는다면<br/><span id="loadingClose">로딩 화면 끄기</span>를 눌러주세요</p>
